添加 nginx https 配置示例

--- a/all_collections/_posts/2023-12-29-server.md
+++ b/all_collections/_posts/2023-12-29-server.md
@@ -189,3 +189,22 @@ upstream fastcgi_backend {
     server unix:/run/php-fpm/www.sock;
 }
 ```
+
+##### Nginx Https SSL 配置
+```lua
+server {
+    listen       443 ssl http2;
+    listen       [::]:443 ssl http2;
+    server_name  ebkdemo.ebrook.work;
+    set $MAGE_ROOT /var/www/ebrook-demo;
+    
+    # proxy_next_upstream off;
+    include /var/www/ebrook-demo/nginx.conf;
+	
+    proxy_ignore_client_abort on;
+
+    ssl_certificate "ssl.pem";
+    ssl_certificate_key "ssl.key";
+    ssl_protocols TLSv1.3;
+}
+```
