add docker command logs

--- a/all_collections/_posts/2023-12-29-server.md
+++ b/all_collections/_posts/2023-12-29-server.md
@@ -182,6 +182,10 @@ sudo systemctl start elasticsearch.service
 ```shell
 composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition .
 ```
+##### 安装指定版本 2.4.6-p3
+```shell
+composer create-project --repository-url=https://repo.magento.com/ magento/project-enterprise-edition=2.4.6-p3 m246p3
+```
 
 ##### 添加 upstream
 ```lua
