mysql drop database command

--- a/all_collections/_posts/2023-12-29-server.md
+++ b/all_collections/_posts/2023-12-29-server.md
@@ -117,6 +117,10 @@ mysql >  CREATE USER 'ebkdemo'@'localhost' IDENTIFIED BY 'Ebrook2023@demo';
 ```SQL
 mysql > CREATE DATABASE `ebrook_demo`;
 ```
+##### 刪除数据库
+```SQL
+mysql > DROP DATABASE `ebrook_demo`;
+```
 ##### 给用户ebkdemo授予数据库ebrook_demo的完全访问权限
 ```SQL
 mysql > GRANT ALL PRIVILEGES ON `ebrook_demo`.* TO "ebkdemo"@"localhost";
